--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,14 +11,15 @@
   -->
 
   <div fxFlex="70%" fxLayout="column" fxLayoutAlign="center center" fxHide.lt-sm class="cover">
-    <div class="cover-content">
+    <!-- <div class="cover-content">
+      <h1 class="mat-display-1 cover-title">{{ 'APP_NAME' | translate}}</h1>
       <h1 class="mat-display-1 cover-title">{{ 'APP_NAME' | translate}}</h1>
       <p class="mat-headline cover-description">
         {{ 'APP_NAME' | translate}} {{'labels.text.is designed by the' | translate}} <a href="https://mifos.org/" target="_blank" class="cover-link">{{'labels.text.Mifos Initiative' | translate}}</a>. {{'labels.text.A' | translate}} <a href="https://mifos.org/resources/community/" target="_blank" class="cover-link">{{'labels.text.global community' | translate}}</a>
         {{'labels.text.elimination of poverty' | translate}}
         <a href="https://mifos.org/take-action/volunteer/" target="_blank" class="cover-link">{{'labels.text.Get involved' | translate}}!</a>
       </p>
-    </div>
+    </div> -->
   </div>
 
   <!--
@@ -42,7 +43,7 @@
 
     <!-- Logo with Organization Name -->
     <div fxLayout="row" fxLayoutAlign="center center" fxFlex="1 0 auto">
-      <img src="assets/images/mifos_lg-logo.png" alt="{{ 'APP_NAME' | translate}} Logo" class="img-container">
+      <img src="assets/images/ibank.png" alt="{{ 'APP_NAME' | translate}} Logo" class="img-container">
     </div>
 
     <!-- Tenant Identifier Name -->
@@ -50,7 +51,7 @@
       <mifosx-tenant-selector></mifosx-tenant-selector>
     </div>
 
-    <!--
+<!--     
       Type of Form:
         Login
         Reset Password
@@ -64,11 +65,12 @@
     </div>
 
     <!-- Contact Information/Resources (hidden on smaller screens) -->
-    <mat-list fxHide.lt-lg fxLayout="row" fxFlexAlign="center" fxFlex="3 0 auto" class="information-list">
+
+    <!-- <mat-list fxHide.lt-lg fxLayout="row" fxFlexAlign="center" fxFlex="3 0 auto" class="information-list">
       <mat-list-item><button mat-button [matMenuTriggerFor]="resourcesMenu">{{'labels.links.Resources' | translate}}</button></mat-list-item>
       <mat-list-item><button mat-button [matMenuTriggerFor]="communityMenu">{{'labels.links.Community' | translate}}</button></mat-list-item>
       <mat-list-item><button mat-button [matMenuTriggerFor]="contributeMenu">{{'labels.links.Contribute' | translate}}</button></mat-list-item>
-    </mat-list>
+    </mat-list> -->
 
     <!-- Footer -->
     <mifosx-footer></mifosx-footer>
